--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.3.0
-  cloud_firestore: ^2.2.2
+
+  #파이어베이스 연동 시
+  #firebase_core: ^1.3.0
+  #cloud_firestore: ^2.2.2
 
 dev_dependencies:
   flutter_test:
