--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  path_provider: ^2.0.6
+  file_picker: ^4.2.0
+  #permission_handler: ^5.0.1+1
+  #app_settings: ^4.0.1+1
   flutter:
     sdk: flutter
 
