--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   path_provider: ^2.0.6
   file_picker: ^4.2.0
   logger:
+  intl:
   #permission_handler: ^5.0.1+1
   #app_settings: ^4.0.1+1
   flutter:
