--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   path_provider: ^2.0.6
   file_picker: ^4.2.0
+  file_picker_cross: ^4.5.0
   logger:
   intl:
   #permission_handler: ^5.0.1+1
