* 파이썬 연동 준비 API.dart 파일 생성

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   file_picker_cross: ^4.5.0
   logger:
   intl:
+  http:
   #permission_handler: ^5.0.1+1
   #app_settings: ^4.0.1+1
   flutter:
