--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   #파이어베이스 연동 시
   #firebase_core: ^1.3.0
   #cloud_firestore: ^2.2.2
+  #이게 에러가 많 ^1.0.0
+  google_mobile_ads: ^0.12.1
 
 dev_dependencies:
   flutter_test:
