앱오프닝광고 소스삽입(실행x) 대화 자세히보기 추가(진행중)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,10 @@ dependencies:
   #파이어베이스 연동 시
   #firebase_core: ^1.3.0
   #cloud_firestore: ^2.2.2
-  #이게 에러가 많 ^1.0.0
+  #밑에 버전 이게 에러가 많아  ^1.0.0
   google_mobile_ads: ^0.12.1
+  #앱오프닝
+  #native_admob_flutter: ^1.4.0
 
 dev_dependencies:
   flutter_test:
